# from-zip

./: LICENSE  README.md  setup.cfg
src/BtgFromZip/: fromzip.py
