[metadata]
name = from-zip-bridgeythegeek
version = 0.0.1
author = Bridgey the Geek
author_email = bridgeythegeek@gmail.com
description = Yield file objects from a zip file where the filename matches a condition
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/bridgeythegeek/from-zip
project_urls =
    Bug Tracker = https://github.com/bridgeythegeek/from-zip/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
